JS - make visited links dark blue; create the projects page; fix some whitespace issues on my resume page;

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -8,6 +8,10 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: @dark_blue;
+}
+
 #container {
     background: @white;
     margin: 0 auto;
